# cpp-github-project

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  dumm_coverage.in
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  docs.cmake  elf_to_size_coverage.py  install-config.cmake  install-rules.cmake  prelude.cmake  spell-targets.cmake  spell.cmake  variables.cmake  windows-set-path.cmake
example/: CMakeLists.txt
include/cpprj/: cpprj.hpp
scripts/: file_size_to_coverage.py
size_test/: CMakeLists.txt  base.cpp  string.cpp  stubs.c  stubs.cpp  to_string.cpp
test/: CMakeLists.txt
test/source/: cpprj_test.cpp  file_size_to_coverage.py  size_test.cpp
